# bored

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmarks/: baseline_results.json  capture_storage_benchmarks.py  executor_benchmarks.cpp  parser_benchmarks.cpp  planner_benchmarks.cpp  storage_benchmarks.cpp
docs/: ast_logical_ir_design.md  catalog_design.md  catalog_operator_guide.md  checkpoint_recovery_milestones.md  ddl_schema_design.md  ddl_verb_reference.md  index_btree_layout.md  index_milestones.md  page_wal_design.md  parser_frontend_milestones.md  parser_operator_guide.md  planner_operator_guide.md  project_backlog.md  query_executor_milestones.md  query_planner_milestones.md  relational_layer_design.md  relational_progress.md  shell_frontend_integration.md  spool_operator_guide.md  storage.md  storage_benchmark_telemetry_backlog.md  storage_incident_playbooks.md  storage_shell_recipes.md  transaction_concurrency_design.md  transaction_concurrency_milestones.md  transaction_operator_guide.md  txn_commit_abort_flow.md  user_tooling_diagnostics_milestones.md
docs/dashboards/: storage_observability_dashboard.json
include/bored/: greeter.hpp
include/bored/catalog/: catalog_accessor.hpp  catalog_bootstrap_ids.hpp  catalog_bootstrapper.hpp  catalog_cache.hpp  catalog_checkpoint_registry.hpp  catalog_ddl.hpp  catalog_encoding.hpp  catalog_ids.hpp  catalog_introspection.hpp  catalog_mutator.hpp  catalog_mvcc.hpp  catalog_pages.hpp  catalog_relations.hpp  catalog_telemetry.hpp  catalog_transaction.hpp  sequence_allocator.hpp
include/bored/ddl/: ddl_command.hpp  ddl_dependency_graph.hpp  ddl_dispatcher.hpp  ddl_errors.hpp  ddl_handlers.hpp  ddl_telemetry.hpp  ddl_validation.hpp  parser_diagnostics.hpp
include/bored/executor/: aggregation_executor.hpp  delete_executor.hpp  executor_context.hpp  executor_node.hpp  executor_telemetry.hpp  executor_telemetry_sampler.hpp  executor_temp_resource_manager.hpp  filter_executor.hpp  hash_join_executor.hpp  (+12 more)
src/: greeter.cpp  main.cpp
src/catalog/: catalog_accessor.cpp  catalog_bootstrapper.cpp  catalog_cache.cpp  catalog_checkpoint_registry.cpp  catalog_ddl.cpp  catalog_encoding.cpp  catalog_introspection.cpp  catalog_mutator.cpp  catalog_telemetry.cpp  catalog_transaction.cpp  sequence_allocator.cpp
src/ddl/: ddl_dependency_graph.cpp  ddl_dispatcher.cpp  ddl_errors.cpp  ddl_handlers.cpp  ddl_telemetry.cpp  ddl_validation.cpp  parser_diagnostics.cpp
src/executor/: aggregation_executor.cpp  delete_executor.cpp  executor_context.cpp  executor_node.cpp  executor_telemetry.cpp  executor_telemetry_sampler.cpp  executor_temp_resource_manager.cpp  filter_executor.cpp  foreign_key_check_executor.cpp  hash_join_executor.cpp  insert_executor.cpp  mvcc_visibility.cpp  nested_loop_join_executor.cpp  projection_executor.cpp  seq_scan_executor.cpp  spool_executor.cpp  tuple_buffer.cpp  tuple_format.cpp  unique_enforce_executor.cpp  update_executor.cpp  worktable_registry.cpp
src/parser/: ddl_command_builder.cpp  ddl_script_executor.cpp  grammar.cpp  parser_telemetry.cpp  relational_ast.cpp  relational_binder.cpp  relational_catalog_binder_adapter.cpp  relational_logical_lowering.cpp  relational_logical_normalization.cpp  relational_logical_plan_dump.cpp  relational_logical_plan_printer.cpp
src/planner/: cost_model.cpp  logical_plan.cpp  memo.cpp  physical_plan.cpp  plan_printer.cpp  planner.cpp  planner_context.cpp  planner_telemetry.cpp  rule.cpp  statistics_catalog.cpp
src/shell/: shell_backend.cpp  shell_engine.cpp
src/storage/: async_io.cpp  checkpoint_coordinator.cpp  checkpoint_image_store.cpp  checkpoint_manager.cpp  checkpoint_page_registry.cpp  checkpoint_scheduler.cpp  checksum.cpp  free_space_map.cpp  free_space_map_persistence.cpp  index_btree_leaf_ops.cpp  index_btree_manager.cpp  index_checkpoint_registry.cpp  index_comparator_registry.cpp  index_retention.cpp  index_retention_executor.cpp  index_retention_pruner.cpp  key_range_lock_manager.cpp  lock_introspection.cpp  lock_manager.cpp  page_manager.cpp  page_operations.cpp  storage_control.cpp  storage_diagnostics.cpp  storage_metrics.cpp  storage_runtime.cpp  storage_telemetry_registry.cpp  temp_resource_registry.cpp  vacuum_background_loop.cpp  vacuum_scheduler.cpp  vacuum_worker.cpp  wal_apply_helpers.cpp  wal_payloads.cpp  wal_reader.cpp  wal_recovery.cpp  wal_replayer.cpp  wal_retention.cpp  wal_telemetry_registry.cpp  wal_undo_walker.cpp  wal_writer.cpp
src/tools/: bored_shell_main.cpp  boredctl_main.cpp  shell_log_formatter.cpp
src/txn/: persistent_transaction_id_allocator.cpp  transaction_manager.cpp  wal_commit_pipeline.cpp
tests/: async_io_ioring_tests.cpp  async_io_tests.cpp  catalog_bootstrap_tests.cpp  catalog_cache_tests.cpp  catalog_checkpoint_registry_tests.cpp  catalog_constraint_accessor_tests.cpp  catalog_ddl_tests.cpp  catalog_encoding_tests.cpp  catalog_integration_tests.cpp  catalog_introspection_tests.cpp  catalog_mutator_tests.cpp  catalog_mvcc_tests.cpp  catalog_sequence_allocator_tests.cpp  catalog_view_accessor_tests.cpp  checkpoint_coordinator_tests.cpp  checkpoint_page_registry_tests.cpp  checkpoint_scheduler_tests.cpp  ddl_dispatcher_tests.cpp  ddl_handlers_tests.cpp  ddl_validation_tests.cpp  executor_aggregation_tests.cpp  executor_constraint_enforcement_tests.cpp  executor_delete_tests.cpp  executor_dml_recovery_tests.cpp  executor_hash_join_tests.cpp  executor_insert_tests.cpp  executor_integration_tests.cpp  executor_join_aggregate_integration_tests.cpp  executor_milestone1_tests.cpp  executor_mvcc_visibility_tests.cpp  executor_nested_loop_join_tests.cpp  executor_scaffolding_tests.cpp  executor_spill_recovery_integration_tests.cpp  executor_spool_tests.cpp  executor_temp_resource_manager_tests.cpp  executor_update_tests.cpp  free_space_map_tests.cpp  index_btree_manager_tests.cpp  index_checkpoint_registry_tests.cpp  index_comparator_tests.cpp  (+58 more)
tests/end_to_end/: e2e_smoke.sql
tests/parser_samples/: invalid_identifiers.sql  valid_identifiers.sql
(+88 files in other folders)
